fix(matchesOverview): fix spacing styling

--- a/src/sass/pages/_MatchesOverview.scss
+++ b/src/sass/pages/_MatchesOverview.scss
@@ -87,10 +87,6 @@
                         max-width: 65%;
                     }
 
-                    .tl-FieldValue {
-                        white-space: normal;
-                    }
-
                     + li {
                         margin-top: getSpacing(1);
                     }
